<resources>
    <string name="app_name">WS Proxy</string>

    <string name="channel_name">Proxy service</string>
    <string name="notification_title">Proxy service running</string>
    <string name="notification_message">Tap to configure</string>

    <string name="notification_permission_not_granted">Notification permission not granted</string>
    <string name="failed_to_start_proxy">Failed to start proxy</string>
    <string name="invalid_port_number">Invalid port number</string>

    <string name="tutorial">Tutorial</string>
    <string name="how_to_setup_a_domain">How to set-up a domain to use?</string>
    <string name="get_nekogram">Get Nekogram</string>
    <string name="get_nekogram_summary">Nekogram is an open-source third-party Telegram client.</string>

    <string name="status">Status</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="restart">Restart</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="domain">Domain</string>
    <string name="local_port">Local port</string>
    <string name="enable_tls">Enable TLS</string>
    <string name="user_agent">User agent</string>
    <string name="connect">Connect</string>
</resources>